	13413 Naght_Seiger_Twin_Edge_	5% chance to activate defense bypassing on normal (non boss) targets for 5 seconds (no visual).
	1185 Violet_Fear		5% chance to activate defense bypassing on normal (non boss) targets for 5 seconds (no visual).
	2385 Recuvative_Armor		Should trigger HP/SP return with magical kills as well.

=======================
2009/05/15
	* Rev. 13784 Updated walk speed and aspd of Okolnir mobs, also fixed the flower mob modes. [L0ne_W0lf]
	* Rev. 13779 Minor database updates related to the Falicious Okolnir dungeon. [L0ne_W0lf]
	- Corrected the names of Andvari's Ring and Valkyrie's Token.
	- Added Crystal_Key and Valkyrie's_Gift item_trade restrictions.
	* Removed custom behavior on some AutoSpellWhenHit bonuses [Playtester]
	- they now use aegis default activation (SHORT+LONG+WEAPON+NORMAL+SKILL)
	* Added graphical effects to bonusautoscripts of Bloody Eater and Atroce Card [Playtester]
2009/05/13
	* Fixed activation rates on Bloody Eater and Violet Fear [Playtester]
	- Bloody Eater is 0.1% activation for 5 seconds
	- Violet Fear is 3% chance to activate Meteor Storm and 5% chance to activate Frost Nova
2009/05/12
	* SG_WARM no longer ignores FLEE by default. [Inkfish]
2009/05/11
	* Rev. 13753 Fixed a couple mistakes in r13752, extra commas at the end a couple lines, and missing quotes around an AL_HEAL. [L0ne_W0lf]
2009/05/10
	* Rev. 13752 Updated pet database. [L0ne_W0lf]
	- Defined the header for the pet database. Lordy was this not fun.
	- All pets now walk at character speed (150), but do not inherit bonuses from owner.
	- All pets have the same hungrydelay, and will lose hunger at 80 points per 60 seconds.
	- Corrected capture success rates for Alice, Zealotus, and the goblin pets.
	* Rev. 13749 Osiris now summons the correct amount of Ancient Mummies at the right slave number (Partial revert of r7010.) [L0ne_W0lf]
2009/05/08