@@ -309,7 +309,7 @@
 173,0,0,0,3500,0
 
 //-- NPC_POISON
-176,0,0,0,0,30000
+176,0,0,0,0,60000
 //-- NPC_BLINDATTACK
 177,0,0,0,0,30000
 //-- NPC_SILENCEATTACK
@@ -317,7 +317,7 @@
 //-- NPC_STUNATTACK
 179,0,0,0,0,5000
 //-- NPC_PETRIFYATTACK
-180,0,0,0,0,30000
+180,0,0,0,0,20000
 //-- NPC_CURSEATTACK
 181,0,0,0,0,30000
 //-- NPC_SLEEPATTACK
@@ -927,23 +927,23 @@
 
 //===== New Monster Skills =================
 //-- NPC_ICEBREATH
-655,0,0,0,0,30000
+655,0,0,0,0,12000
 //-- NPC_ACIDBREATH
-657,0,0,0,0,30000
+657,0,0,0,0,60000
 //-- NPC_DRAGONFEAR (Upkeep2 times are duration of: Stun(lv1), Curse(lv2), Silence(lv3) and Bleeding (lv4))
-659,0,0,0,0,5000:30000:30000:60000
+659,0,0,0,0,5000:30000:30000:120000
 //-- NPC_BLEEDING
-660,0,0,0,0,60000
+660,0,0,0,0,120000
 //-- NPC_HELLJUDGEMENT
 662,0,0,0,0,30000
 //-- NPC_WIDESILENCE
 663,0,0,0,0,30000
 //-- NPC_WIDEFREEZE
-664,0,0,0,0,30000
+664,0,0,0,0,12000
 //-- NPC_WIDEBLEEDING
-665,0,0,0,0,60000
+665,0,0,0,0,120000
 //-- NPC_WIDESTONE
-666,0,0,0,0,30000
+666,0,0,0,0,20000
 //-- NPC_WIDECONFUSE
 667,0,0,0,0,30000
 //-- NPC_WIDESLEEP
